Split Action in multiple files to improve testing Add a new InputOption to ignore a failure for no response receive

--- a/action.yml
+++ b/action.yml
@@ -29,8 +29,8 @@ inputs:
     bearerToken:
         description: 'Bearer Authentication Token'
         required: false
-    customHeaders:
-        description: 'Custom HTTP Headers'
+    preventFailureOnNoResponse:
+        description: 'Prevent this Action to fail if the request respond without an response'
         required: false
 outputs:
     response:
