--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,11 +30,9 @@ jobs:
           method: 'POST'
           data: >-
             {
-              "key":"${TEXT}",
+              "key":"multi line\ntest
+              text",
             }
-        env:
-            TEXT: "multi line\ntest
-            text"
       
       - name: Request Postment Echo BasicAuth
         uses: ./
