EscapeData property for newline issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           url: 'https://postman-echo.com/post'
           method: 'POST'
+          escapeData: 'true'
           data: >-
             {
               "key":"multi line\ntest
