Fix test yaml content

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           data: >-
             {
               "key":"multi line\ntest
-              text",
+              text"
             }
       
       - name: Request Postment Echo BasicAuth
