Support for unescaped newlines in data (#16)
* support newline escaping

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,18 @@ jobs:
           method: 'POST'
           data: '{ "key": "value" }'
       
+      - name: Request Postment Echo POST
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/post'
+          method: 'POST'
+          escapeData: 'true'
+          data: >-
+            {
+              "key":"multi line\ntest
+              text"
+            }
+      
       - name: Request Postment Echo BasicAuth
         uses: ./
         with:
