Specify action text case name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           method: 'POST'
           data: '{ "key": "value" }'
       
-      - name: Request Postment Echo POST
+      - name: Request Postment Echo POST with Unescaped Newline
         uses: ./
         with:
           url: 'https://postman-echo.com/post'
