--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-request-action",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "description": "",
   "main": "src/index.js",
   "private": false,
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@zeit/ncc": "^0.22",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "form-data": "^3.0.0"
   }
 }
