Implement StatusCode ignore list

--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,9 @@ inputs:
     preventFailureOnNoResponse:
         description: 'Prevent this Action to fail if the request respond without an response'
         required: false
+    ignoreStatusCodes:
+        description: 'Prevent this Action to fail if the request respond with one of the configured StatusCodes'
+        required: false
     escapeData:
         description: 'Escape newlines in data string content'
         required: false
