--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
 
 jobs:
   build:
+    if: >
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.user.login == 'dependabot[bot]'
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -44,9 +47,28 @@ jobs:
           git commit -m "Update dist"
           git push origin HEAD:${{ steps.ref.outputs.branch }}
         fi
-  test:
+  integrity:
     needs:
       - build
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout repo
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - name: Build action
+      run: |
+        npm ci &&
+        npm run build
+    - name: Repository Integrity Check
+      run: |
+        git diff --quiet dist
+  test:
+    needs:
+      - integrity
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
