--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
           git push origin HEAD:${{ steps.ref.outputs.branch }}
         fi
   integrity:
+    if: >
+      !failure() &&
+      !cancelled()
     needs:
       - build
     runs-on: ubuntu-latest
