--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "private": false,
   "scripts": {
-    "build": "ncc build src/index.js -o dist"
+    "build": "esbuild --bundle --outfile=./dist/index.js --platform=node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,11 @@
   },
   "homepage": "https://github.com/fjogeleit/http-request-action#readme",
   "devDependencies": {
-    "@zeit/ncc": "^0.22",
     "axios": "^1.1.3",
+    "esbuild": "^0.15.13",
     "form-data": "^4.0.0"
   },
   "dependencies": {
-    "@actions/core": "^1.9.1"
+    "@actions/core": "^1.10.0"
   }
 }
