--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "private": false,
   "scripts": {
-    "build": "esbuild --bundle --outfile=./dist/index.js --platform=node ./src/index.js"
+    "build": "esbuild --bundle --outfile=./dist/index.js --target=node16 --platform=node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
