--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "private": false,
   "scripts": {
-    "build": "esbuild --bundle --legal-comments=none --outfile=./dist/index.js --target=node16 --platform=node ./src/index.js"
+    "build": "ncc build src/index.js -o dist"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/fjogeleit/http-request-action#readme",
   "devDependencies": {
+    "@vercel/ncc": "^0.34.0",
     "axios": "^1.1.3",
-    "esbuild": "^0.15.13",
     "form-data": "^4.0.0"
   },
   "dependencies": {
