--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/fjogeleit/http-request-action#readme",
   "devDependencies": {
-    "@zeit/ncc": "^0.22",
+    "@vercel/ncc": "^0.34.0",
     "axios": "^1.1.3",
     "form-data": "^4.0.0"
   },
   "dependencies": {
-    "@actions/core": "^1.9.1"
+    "@actions/core": "^1.10.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
