--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "@vercel/ncc": "^0.34.0",
     "axios": "^1.1.3",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "yargs": "^17.6.2"
   },
   "dependencies": {
     "@actions/core": "^1.10.0"
