Add mTLS ClientCert support
Signed-off-by: Frank Jogeleit <frank.jogeleit@lovoo.com>

--- a/action.yml
+++ b/action.yml
@@ -50,6 +50,12 @@ inputs:
     httpsCA:
         description: 'Certificate authority as string in PEM format'
         required: false
+    httpsCert:
+        description: 'Client Certificate as string'
+        required: false
+    httpsKey:
+        description: 'Client Certificate Key as string'
+        required: false
     responseFile:
         description: 'Persist the response data to the specified file path'
         required: false
