--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "install": "^0.13.0",
+    "npm": "^10.2.4"
   },
   "engines": {
     "node": ">=16.0.0"
