--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -11,15 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       - name: Given the gh-action is used with only mandatory fields
-        id: test-data
+        id: execution
         uses: ./
         with:
-          url: "https://postman-echo.com/get"
+          url: "https://postman-echo.com/post"
       - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
         name: Then outputs.status value must be 200 as this URL exists
         with:
           expected: '200'
-          actual: ${{ steps.test-data.outputs.status }}
+          actual: ${{ steps.execution.outputs.status }}
           comparison: exact
 
 
