--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   it-tests-use-input-required-values-only:
-    name: "IT Test - Providing only mandatory fields should work"
+    name: "IT Test - Providing only mandatory URL field should do a POST and return a 200"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -21,8 +21,18 @@ jobs:
           expected: '200'
           actual: ${{ steps.execution.outputs.status }}
           comparison: exact
-
-
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.headers value must be <>
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.headers }}
+          comparison: exact
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.response value must be <TBD>
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.response }}
+          comparison: exact
 
   it-tests:
     name: "All IT Tests have to pass"
