--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -5,8 +5,27 @@ on:
 
 jobs:
 
-  it-tests-use-input-required-values-only:
-    name: "IT Test - Providing only mandatory URL field should do a POST and return a 200"
+  test-method-get-on-existing-url:
+    name: "IT Test - Request Postman Echo GET"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/get'
+          method: 'GET'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
+  test-method-post-on-existing-url:
+    name: "IT Test - Request Postman Echo POST"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -15,23 +34,14 @@ jobs:
         uses: ./
         with:
           url: "https://postman-echo.com/post"
+          method: 'POST'
+          data: '{ "key": "value" }'
+
       - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
         name: Then outputs.status value must be 200 as this URL exists
         with:
           expected: '200'
           actual: ${{ steps.execution.outputs.status }}
-          comparison: exact
-      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
-        name: Then outputs.headers value must be <>
-        with:
-          expected: '"content-type":"application/json; charset=utf-8"'
-          actual: ${{ steps.execution.outputs.headers }}
-          comparison: contains
-      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
-        name: Then outputs.response value must be <TBD>
-        with:
-          expected: '200'
-          actual: ${{ steps.execution.outputs.response }}
           comparison: exact
 
   it-tests:
@@ -40,7 +50,8 @@ jobs:
     if: always()
     needs:
       # Add your tests here so that they prevent the merge of broken changes
-      - it-tests-use-input-required-values-only
+      - test-method-get-on-existing-url
+      - test-method-post-on-existing-url
     steps:
       - uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
         with:
