--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -69,6 +69,55 @@ jobs:
           actual: ${{ steps.execution.outputs.status }}
           comparison: exact
 
+  test-basic-auth:
+    name: "IT Test - Request Postman Echo BasicAuth"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/basic-auth'
+          method: 'GET'
+          username: 'postman'
+          password: 'password'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
+  test-input-ignore-failure-code-404:
+    name: "IT Test - Request Postman Echo with 404 Response and ignore failure code"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/status/404'
+          method: 'GET'
+          ignoreStatusCodes: '404'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: 'success'
+          actual: ${{ steps.execution.outcome }}
+          comparison: exact
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '404'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
+
   it-tests:
     name: "All IT Tests have to pass"
     runs-on: ubuntu-latest
@@ -78,6 +127,8 @@ jobs:
       - test-method-get-on-existing-url
       - test-method-post-on-existing-url
       - test-method-post-on-existing-url-with-unescaped-newline
+      - test-basic-auth
+      - test-input-ignore-failure-code-404
     steps:
       - uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
         with:
