--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -117,6 +117,30 @@ jobs:
           actual: ${{ steps.execution.outputs.status }}
           comparison: exact
 
+  test-input-files:
+    name: "IT Test - Request Postman Echo POST Multipart"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Create Test File
+        run: |
+          echo "test" > testfile.txt
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/post'
+          method: 'POST'
+          data: '{ "key": "value" }'
+          files: '{ "file": "${{ github.workspace }}/testfile.txt" }'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
 
   it-tests:
     name: "All IT Tests have to pass"
@@ -129,6 +153,7 @@ jobs:
       - test-method-post-on-existing-url-with-unescaped-newline
       - test-basic-auth
       - test-input-ignore-failure-code-404
+      - test-input-files
     steps:
       - uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
         with:
