--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -176,6 +176,28 @@ jobs:
           actual: ${{ steps.execution-response-file.outputs.response_content }}
           comparison: contains
 
+  test-input-files-without-data:
+    name: "IT Test - Request Postman Echo POST Multipart without data"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Create Test File
+        run: |
+          echo "test" > testfile3.txt
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/post'
+          method: 'POST'
+          files: '{ "file": "${{ github.workspace }}/testfile3.txt" }'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
 
   it-tests:
     name: "All IT Tests have to pass"
@@ -190,6 +212,7 @@ jobs:
       - test-input-ignore-failure-code-404
       - test-input-files
       - test-input-responseFile
+      - test-input-files-without-data
     steps:
       - uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
         with:
