--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -199,6 +199,70 @@ jobs:
           actual: ${{ steps.execution.outputs.status }}
           comparison: exact
 
+  test-input-file-with-single-file:
+    name: "IT Test - Request Postman Echo POST single file"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Create Test File
+        run: |
+          echo "test" > testfile4.txt
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/post'
+          method: 'POST'
+          file: "${{ github.workspace }}/testfile.txt"
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
+  test-input-data-with-url-encoded-string:
+    name: "IT Test - Request Postman Echo POST URLEncoded string data"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/post'
+          contentType : 'application/x-www-form-urlencoded'
+          method: 'POST'
+          data: 'key=value'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
+  test-input-data-with-url-encoded-json-data:
+    name: "IT Test - Request Postman Echo POST URLEncoded json data"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Given the gh-action is used with only mandatory fields
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/post'
+          contentType : 'application/x-www-form-urlencoded'
+          method: 'POST'
+          data: '{"key":"value"}'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200 as this URL exists
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
   it-tests:
     name: "All IT Tests have to pass"
     runs-on: ubuntu-latest
@@ -213,6 +277,9 @@ jobs:
       - test-input-files
       - test-input-responseFile
       - test-input-files-without-data
+      - test-input-file-with-single-file
+      - test-input-data-with-url-encoded-string
+      - test-input-data-with-url-encoded-json-data
     steps:
       - uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
         with:
