--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -213,7 +213,7 @@ jobs:
         with:
           url: 'https://postman-echo.com/post'
           method: 'POST'
-          file: "${{ github.workspace }}/testfile.txt"
+          file: "${{ github.workspace }}/testfile4.txt"
 
       - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
         name: Then outputs.status value must be 200 as this URL exists
