--- a/.github/workflows/it-tests.yml
+++ b/.github/workflows/it-tests.yml
@@ -291,6 +291,27 @@ jobs:
           actual: ${{ steps.execution.outputs.status }}
           comparison: exact
 
+  test-delete-http-method:
+    name: "IT Test - Request Postman Echo DELETE"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Given the gh-action is used with method DELETE
+        id: execution
+        uses: ./
+        with:
+          url: 'https://postman-echo.com/delete'
+          contentType : 'application/json'
+          method: 'DELETE'
+          data: '{"key":"value"}'
+
+      - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
+        name: Then outputs.status value must be 200
+        with:
+          expected: '200'
+          actual: ${{ steps.execution.outputs.status }}
+          comparison: exact
+
   it-tests:
     name: "All IT Tests have to pass"
     runs-on: ubuntu-latest
@@ -309,6 +330,7 @@ jobs:
       - test-input-file-with-single-file
       - test-input-data-with-url-encoded-string
       - test-input-data-with-url-encoded-json-data
+      - test-delete-http-method
     steps:
       - uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
         with:
