--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,20 +18,15 @@ jobs:
     steps:
     - id: ref
       run: |
-        if [[ -n '${{ github.event.ref }}' ]]; then
-          branch="${{ github.event.ref }}"
-          echo "branch=$branch" >> $GITHUB_OUTPUT
-        else
-          branch="${{ github.event.pull_request.head.ref }}"
-          echo "branch=$branch" >> $GITHUB_OUTPUT
-        fi
+        branch="${{ github.event.ref || github.event.pull_request.head.ref }}"
+        echo "branch=$branch" >> $GITHUB_OUTPUT
     - name: checkout repo
-      uses: actions/checkout@v6.0.1
+      uses: actions/checkout@v6.0.2
       with:
         ref: ${{ steps.ref.outputs.branch }}
     - uses: actions/setup-node@v6
       with:
-        node-version: '16'
+        node-version-file: '.tool-versions'
     - name: Install dependencies
       run: |
         npm ci
@@ -56,12 +51,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout repo
-      uses: actions/checkout@v6.0.1
+      uses: actions/checkout@v6.0.2
       with:
         persist-credentials: false
     - uses: actions/setup-node@v6
       with:
-        node-version: '16.17.0'
+        node-version-file: '.tool-versions'
     - name: Build action
       run: |
         npm ci
